@@ -38,6 +38,8 @@ APP_DEFAULT_LOCALE=en
 # Ability to disable signups on your instance.
 # Can be true or false. Default to false.
 APP_DISABLE_SIGNUP=false
+# Enable user email verification.
+APP_SIGNUP_DOUBLE_OPTIN=false
 
 # Set trusted proxy IP addresses. Useful for ssl terminating loadbalancers.
 # To trust all proxies that connect directly to your server, use a "*".
