@@ -60,6 +60,9 @@ APP_DEFAULT_LOCALE=en
 # Can be true or false. Default to false.
 APP_DISABLE_SIGNUP=true
 
+# Enable user email verification.
+APP_SIGNUP_DOUBLE_OPTIN=false
+
 # Set trusted proxy IP addresses.
 # To trust all proxies that connect directly to your server, use a "*".
 # To trust one or more specific proxies that connect directly to your server, use a comma separated list of IP addresses.
