@@ -4,7 +4,7 @@ namespace App\Http\Controllers\Auth;
 
 use App\Account;
 use App\Http\Controllers\Controller;
-use Illuminate\Foundation\Auth\AuthenticatesUsers;
+use Bestmomo\LaravelEmailConfirmation\Traits\AuthenticatesUsers;
 
 class LoginController extends Controller
 {
