@@ -4,9 +4,9 @@
 # {{ $greeting }}
 @else
 @if ($level == 'error')
-# Whoops!
+# @lang('mail.notifications_whoops')
 @else
-# Hello!
+# @lang('mail.notifications_hello')
 @endif
 @endif
 
@@ -17,7 +17,7 @@
 @endforeach
 
 {{-- Action Button --}}
-@if (isset($actionText))
+@isset($actionText)
 <?php
     switch ($level) {
         case 'success':
@@ -33,7 +33,7 @@
 @component('mail::button', ['url' => $actionUrl, 'color' => $color])
 {{ $actionText }}
 @endcomponent
-@endif
+@endisset
 
 {{-- Outro Lines --}}
 @foreach ($outroLines as $line)
@@ -41,18 +41,22 @@
 
 @endforeach
 
-<!-- Salutation -->
+{{-- Salutation --}}
 @if (! empty($salutation))
 {{ $salutation }}
 @else
-Regards,<br>{{ config('app.name') }}
+@lang('mail.notifications_regards'),<br>{{ config('app.name') }}
 @endif
 
-<!-- Subcopy -->
-@if (isset($actionText))
+{{-- Subcopy --}}
+@isset($actionText)
 @component('mail::subcopy')
-If you’re having trouble clicking the "{{ $actionText }}" button, copy and paste the URL below
-into your web browser: [{{ $actionUrl }}]({{ $actionUrl }})
+@lang('mail.notifications_footer',
+    [
+        'actionText' => $actionText,
+        'actionURL' => $actionUrl
+    ]
+)
 @endcomponent
-@endif
+@endisset
 @endcomponent
