@@ -34,13 +34,16 @@ Route::middleware(['auth'])->group(function () {
 });
 
 Route::middleware(['auth', '2fa'])->group(function () {
+    Route::post('/validate2fa', 'Auth\Validate2faController@index');
+});
+
+Route::middleware(['auth', 'auth.confirm', '2fa'])->group(function () {
     Route::group(['as' => 'dashboard'], function () {
         Route::get('/dashboard', 'DashboardController@index')->name('.index');
         Route::get('/dashboard/calls', 'DashboardController@calls');
         Route::get('/dashboard/notes', 'DashboardController@notes');
         Route::post('/dashboard/setTab', 'DashboardController@setTab');
     });
-    Route::post('/validate2fa', 'DashboardController@index');
 
     Route::get('/compliance', 'ComplianceController@index')->name('compliance');
     Route::post('/compliance/sign', 'ComplianceController@store');
